--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<html>
-	<head>
-	
-		<title>KESHAB NEPALI</title>
-	</head>
-	<body>
-		
-		<h1>Hello World<h1>
-			<h2>Its me Keshab Nepali</h2>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>CLI Interface Webpage</title>
+</head>
+<body>
+    <div class="terminal">
+        <div class="output"></div>
+        <div class="input-line">
+            <span class="prompt">$</span>
+            <input type="text" id="cli-input" autofocus>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
