--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <aside class="sidebar">
+            <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
             <h2>Commands</h2>
             <ul>
                 <li>help</li>
