--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="container">
         <aside class="sidebar">
             <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-            <h2>Commands</h2>
+            <h2>Navigation</h2>
             <ul>
-                <li>help</li>
-                <li>whoami</li>
-                <li>blog</li>
-                <li>contact</li>
-                <li>projects</li>
+                <li><button onclick="navigateTo('home')">Home</button></li>
+                <li><button onclick="navigateTo('about')">About</button></li>
+                <li><button onclick="navigateTo('blog')">Blog</button></li>
+                <li><button onclick="navigateTo('projects')">Projects</button></li>
+                <li><button onclick="navigateTo('contact')">Contact</button></li>
             </ul>
         </aside>
         <main class="terminal">
