--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terminal Portfolio</title>
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <title>Keshab Nepali</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <main class="terminal">
-            <div class="output"></div>
+<!--             <div class="output"></div> -->
             <div class="input-line">
                 <span class="prompt">$</span>
                 <input id="cli-input" type="text" autofocus placeholder="Type 'help' command to navigate.......... ">
