--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <main class="terminal">
-<!--             <div class="output"></div> -->
+            <div class="output"></div>
             <div class="input-line">
                 <span class="prompt">$</span>
                 <input id="cli-input" type="text" autofocus placeholder="Type 'help' command to navigate.......... ">
