--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Keshab Nepali</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,10 +12,8 @@
             <div class="output"></div>
             <div class="input-line">
                 <span class="prompt">$</span>
-                <input id="cli-input" type="text" autofocus placeholder="Type 'help' command to navigate.......... ">
+                <input id="cli-input" type="text" autofocus placeholder="Type commands here...">
             </div>
         </main>
     </div>
     <script src="script.js"></script>
-</body>
-</html>
