--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="clock" class="d-flex justify-content-center align-items-center">
+        <span id="clock-time"></span>
+    </div>
     <div class="terminal">
         <div class="output" id="output"></div>
         <div class="input-line">
