--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keshab Nepali</title>
+    <title>Terminal Interface with Clock</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="clock" class="d-flex justify-content-center align-items-center">
-        <span id="clock-time"></span>
-    </div>
+    <div id="clock">12:00:00</div>
     <div class="terminal">
-        <div class="output" id="output"></div>
+        <div id="output" class="output"></div>
         <div class="input-line">
             <span class="prompt">$</span>
-            <input type="text" id="cli-input" placeholder="Type a command..." autofocus>
+            <input type="text" id="cli-input" placeholder="Enter command...">
         </div>
     </div>
     <script src="script.js"></script>
