--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="clock">18:38:00</div>
+    <div id="clock">
+         <script type="text/javascript">
+            updateClock();
+         </script>
+    </div>
     <div class="terminal">
         <div id="output" class="output"></div>
         <div class="input-line">
